@startuml test

' 1. search
' 2. click recipe, next page (result area)
' 3. add to shopping list, like, change servings(recipe area)
' 4. check like, click liked recipe (love area)
' 5. change value of list, remove shopping list (list area)
class AppController{
    + Object DOMString
    + ResultUIController resultUIController
    + RecipeUIController recipeUIController
    + ShoppingListUIController shoppingListUIController
    + LikeUIController likeUIController
    + DataProcessor dataProcessor
    + RecipeController recipeController

    ' init
    + void init()

    'result area
    + void searchRecipe(foodName)
    + void goPage(num)
    'recipe area
    + void selectRecipe(rid)
    + void addShoppingList(ingredients)
    'love area
    + void likeRecipe(rid)
    'list area
    + void deleteIngredient(id)
    + void changeServings(newServings)
}

package "views"{
    ' 1. display list of searched result
    ' <li>
    '     <a class="results__link results__link--active" href="#23456">
    '         <figure class="results__fig">
    '             <img src="img/test-1.jpg" alt=
        '"Test">
        '         </figure>
        '         <div class="results__data">
        '             <h4 class="results__name">Pasta with Tomato ...</h4>
        '             <p class="results__author">The Pioneer Woman</p>
        '         </div>
        '     </a>
        ' </li>
        '  <button class="btn-inline results__btn--prev">
        '             <svg class="search__icon">
        '                 <use href="img/icons.svg#icon-triangle-left"></use>
        '             </svg>
        '             <span>Page 1</span>
        '         </button>
        '         <button class="btn-inline results__btn--next">
        '             <span>Page 3</span>
        '             <svg class="search__icon">
        '                 <use href="img/icons.svg#icon-triangle-right"></use>
        '             </svg>
        ' </button>
        class ResultUIController{
            'results__pages -> button
            'results__list -> result
            + Object element
            + Object[] result

            ' rid
            + void setResult(Object[] result)
            + void activeResult(String rid)
            ' page 10 as a page
            + void displayList(Integer pageNum)
            + void displayButton(Integer pageNum)
            + void displayResult(Integer pageNum)

        }

        ' 2. display recipe detail
        '   <figure class="recipe__fig">
        '             <img src="img/test-1.jpg" alt=
            '"Tomato" class="recipe__img">
            '             <h1 class="recipe__title">
            '                 <span>Pasta with tomato cream sauce</span>
            '             </h1>
            '         </figure>
            '         <div class="recipe__details">
            '             <div class="recipe__info">
            '                 <svg class="recipe__info-icon">
            '                     <use href="img/icons.svg#icon-stopwatch"></use>
            '                 </svg>
            '                 <span class="recipe__info-data recipe__info-data--minutes">45</span>
            '                 <span class="recipe__info-text"> minutes</span>
            '             </div>
            '             <div class="recipe__info">
            '                 <svg class="recipe__info-icon">
            '                     <use href="img/icons.svg#icon-man"></use>
            '                 </svg>
            '                 <span class="recipe__info-data recipe__info-data--people">4</span>
            '                 <span class="recipe__info-text"> servings</span>

            '                 <div class="recipe__info-buttons">
            '                     <button class="btn-tiny">
            '                         <svg>
            '                             <use href="img/icons.svg#icon-circle-with-minus"></use>
            '                         </svg>
            '                     </button>
            '                     <button class="btn-tiny">
            '                         <svg>
            '                             <use href="img/icons.svg#icon-circle-with-plus"></use>
            '                         </svg>
            '                     </button>
            '                 </div>

            '             </div>
            '             <button class="recipe__love">
            '                 <svg class="header__likes">
            '                     <use href="img/icons.svg#icon-heart-outlined"></use>
            '                 </svg>
            '             </button>
            '         </div>



            '         <div class="recipe__ingredients">
            '             <ul class="recipe__ingredient-list">
            '                 <li class="recipe__item">
            '                     <svg class="recipe__icon">
            '                         <use href="img/icons.svg#icon-check"></use>
            '                     </svg>
            '                     <div class="recipe__count">1000</div>
            '                     <div class="recipe__ingredient">
            '                         <span class="recipe__unit">g</span>
            '                         pasta
            '                     </div>
            '                 </li>
            '             </ul>

            '             <button class="btn-small recipe__btn">
            '                 <svg class="search__icon">
            '                     <use href="img/icons.svg#icon-shopping-cart"></use>
            '                 </svg>
            '                 <span>Add to shopping list</span>
            '             </button>
            '         </div>

            '         <div class="recipe__directions">
            '             <h2 class="heading-2">How to cook it</h2>
            '             <p class="recipe__directions-text">
            '                 This recipe was carefully designed and tested by
            '                 <span class="recipe__by">The Pioneer Woman</span>. Please check out directions at their website.
            '             </p>
            '             <a class="btn-small recipe__btn" href="http://thepioneerwoman.com/cooking/pasta-with-tomato-cream-sauce/" target="_blank">
            '                 <span>Directions</span>
            '                 <svg class="search__icon">
            '                     <use href="img/icons.svg#icon-triangle-right"></use>
            '                 </svg>

            '             </a>
            '         </div>

            '     </div>
            class RecipeUIController{
                + Object element
                + Object recipe
                + void setRecipe(Object recipe)
                + void displayFigure()
                + void displayIngredient()
                + void displayDirection()
            }
            ' 3. display shoppinglist
            ' <li class="shopping__item">
            '     <div class="shopping__count">
            '         <input type="number" value="500" step="100">
            '         <p>g</p>
            '     </div>
            '     <p class="shopping__description">Pasta</p>
            '     <button class="shopping__delete btn-tiny">
            '         <svg>
            '             <use href="img/icons.svg#icon-circle-with-cross"></use>
            '         </svg>
            '     </button>
            ' </li>
            class ShoppingListUIController{
                + Object element
                + void addItem(Object ingredient)
                + void deleteItem(String id)
            }
            ' 4. display liked recipes
            '  <li>
            '     <a class="likes__link" href="#23456">
            '         <figure class="likes__fig">
            '             <img src="img/test-1.jpg" alt=
                ' "Test">
                '         </figure>
                '         <div class="likes__data">
                '             <h4 class="likes__name">Pasta with Tomato ...</h4>
                '             <p class="likes__author">The Pioneer Woman</p>
                '         </div>
                '     </a>
                ' </li>
                class LikeUIController{
                    Object element
                    void displayLikedRecipes(Object[] recipes)
                }

            }



            ' 1. search -> search by recipe name

            ' foodName*
            ' ---
            ' getRecipes
            package "models"{
                class DataProcessor {
                    + String foodName
                    + Object[] getRecipes(String foodName)
                    + Object getRecipes(Integer rid)
                }

                ' 2. recipe -> change recipe item info by servings
                '           -> save the recipe item
                '           -> remove the recipe item
                ' id*
                ' recipe
                ' ingredients\
                ' ---
                ' saveRecipe
                ' deleteRecipe
                ' modifyIngredient
                ' getRecipe
                class RecipeController {
                    + Integer rid
                    + DataProcessor dataProcessor
                    + IngredientProcessor ingredientProcessor
                    + Object recipe
                    + Object[] ingredients
                    + void init(Integer rid)
                    + void saveRecipe()
                    + Object modifyIngredient(Integer newServings)
                    + Object getLikedRecipes()
                    + Object getRecipe()
                }
                ' 2.5 ingredient -> preprocess ingredient

                ' ingredient*
                ' ---
                ' preprocessIngredients -> {}
                class IngredientProcessor {
                    + Object units
                    + Array useless
                    + Object getIngredients(Object ingredientData)
                }
                ' 3. shoppingList ->  add shopping item
                '                 ->  remove shopping item

                ' list = []
                ' ---
                ' addItem
                ' removeItem
                class ShoppingListController {
                    + void addItem(Object ingredient)
                    + void deleteItem(Integer id)
                    + void modifyItem(Integer id, Integer value)
                }
            }

            RecipeController ..|> DataProcessor
            RecipeController ..|> IngredientProcessor
            AppController -> DataProcessor
            AppController -> RecipeController
            AppController -> ShoppingListController
            AppController -> ResultUIController
            AppController -> RecipeUIController
            AppController -> ShoppingListUIController
            AppController -> LikeUIController

            @enduml

